[tool.poetry]
name = "marks-pismo-case"
version = "0.1.0"
description = ""
authors = ["Mark Cosciello <mark.cosciello@paramount.com>"]
readme = "README.md"
packages = [{include = "pismo_case", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
faker = "^29.0.0"
pytest = "^8.3.3"
pyspark = "^3.5.2"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
